1998-11-27  Evan Lawrence <evan@worldpath.net>

	* src/gE_document.c: Fixed it so the titlebar displays
	  the filename, then GEDIT_ID, not the other way around.

	* src/commands.c: Added accelerators for keyboard navigation
	  to the Recent Documents list in the File menu.

	* src/toolbar.c: Some minor tweaks to the relieved toolbars in the
	  GTK-only version.

	* src/gE_prefs_box.c: Added frames and other such niceties to make
	  the dialog look a little more appealing.

	* src/search.c: Fixed some bugs that have been bugging me - it no
	  longer erases the previous search string unless you've actually
	  switched to another mode (text vs. line), and, when Searching 
	  (not Search and Replacing) it will act as though you clicked OK
	  when you press enter.

	* src/main.h: Added another #define for WITHOUT_GNOME to do with
	  internationalization.

	* xpm/tb_prefs.xpm: Fixed it so it's transparent.

Thu Nov 26 19:30:08 EST 1998 Gregory McLean <gregm@comstar.net>

	* src/gE_files.c : clist updates to bring into sync with gtk 1.1.5

1998-11-19  Evan Lawrence <evan@worldpath.net>

	* src/gE_prefslib.c: More fixes to the prefs system - it
	seems to be working correctly now...

1998-11-18  Evan Lawrence <evan@worldpath.net>

	* src/menus.c: Ditched the foot menu - it's a great
	UI idea, but it needs to be done properly in gnome-app,
	and is just confusing people ATM
	
	* src/gE_prefslib.c: Fixed some things that had broken
	GTK-only prefs - it's still not perfect, but sorta kinda
	works now. Let me know specifics on what's wrong with it,
	if you can find any.

1998-11-15  Alex Roberts  <bse@dial.pipex.com>

	* src/gE_prefs_box.c: Prefrerences now work in non-Gnome
	  (it's taken me over 3 hours to get this damn thing to work!)..

1998-11-08  Chris Lahey  <clahey@umich.edu>

	* src/gedit.c (main): Switched to popt.

1998-10-31  Alex Roberts  <bse@dial.pipex.com>

	* Tidied up Make warnings... Clean build on all ports..

1998-10-29  Alex Roberts  <bse@dial.pipex.com>
