@@ -1,3 +1,13 @@
+1998-11-29  Alex Roberts <bse@dial.pipex.com>
+
+	* src/main.h:
+	  src/gE_document.c:
+	  src/gE_prefslib.c:
+	  src/gE_prefs.c:
+	  src/gE_prefs_box.c: Implemented Scrollball and Split-Screen in the
+	  preferences dialog... Split Screen can now be properly turned on and
+	  off, unlike in previous times...
+
 1998-11-27  Evan Lawrence <evan@worldpath.net>
 
 	* src/gE_document.c: Fixed it so the titlebar displays
